--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,8 +126,10 @@ include(Options)
 #   compile-timing-perf
 #----------------------------------------------------------------------------------------#
 
+option(TIMEMORY_USE_CTP "Enable compile-time-perf" OFF)
+mark_as_advanced(TIMEMORY_USE_CTP)
 if(TIMEMORY_BUILD_DEVELOPER OR TIMEMORY_USE_CTP)
-    find_package(compile-time-perf QUIET)
+    find_package(compile-time-perf)
     if(compile-time-perf_FOUND)
         enable_compile_time_perf(timemory-compile-time
             LINK
