--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,6 +27,7 @@ environment:
       BUILD_C: "ON"
       BUILD_STATIC: "OFF"
       BUILD_TESTING: "ON"
+      LINE_PROFILER: "ON"
     - CONDA: 37
       CPP: 14
       CONFIG: RelWithDebInfo
@@ -38,6 +39,7 @@ environment:
       BUILD_C: "OFF"
       BUILD_STATIC: "ON"
       BUILD_TESTING: "OFF"
+      LINE_PROFILER: "ON"
     - PYTHON: 36
       CPP: 14
       CONFIG: Debug
@@ -49,6 +51,7 @@ environment:
       BUILD_C: "ON"
       BUILD_STATIC: "OFF"
       BUILD_TESTING: "OFF"
+      LINE_PROFILER: "OFF"
     - PYTHON: 37
       CPP: 17
       CONFIG: MinSizeRel
@@ -60,6 +63,7 @@ environment:
       BUILD_C: "OFF"
       BUILD_STATIC: "ON"
       BUILD_TESTING: "OFF"
+      LINE_PROFILER: "ON"
 
 install:
   # Configure environment
@@ -129,6 +133,7 @@ build_script:
     -DTIMEMORY_BUILD_TOOLS="%TOOLS%"
     -DTIMEMORY_BUILD_GOOGLE_TEST="%BUILD_TESTING%"
     -DTIMEMORY_USE_WINSOCK="%WINSOCK%"
+    -DTIMEMORY_BUILD_PYTHON_LINE_PROFILER="%LINE_PROFILER%"
   - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
   - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
