--- a/.travis.yml
+++ b/.travis.yml
@@ -149,6 +149,7 @@ install:
   - source activate
   - conda activate pyctest
   - python -m pip install -r requirements.txt
+  - python -m pip install pytest
   - if [ -n "$(which mpicc)" ]; then
       python -m pip install mpi4py;
     fi
@@ -173,6 +174,10 @@ script:
   # if python install test file exists, run it
   - if [ -f "tests/test-python-install-import.cmake" ]; then
       cmake -P tests/test-python-install-import.cmake;
+      if [ -d "timemory/hatchet" ]; then
+          ln -s timemory/hatchet hatchet;
+          PYTHONPATH=. $(which pytest);
+      fi;
       cd;
       export PYTHON_PATH=${HOME}/timemory-install/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:${PYTHONPATH};
       python${TRAVIS_PYTHON_VERSION} -c "import timemory";
