--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -116,7 +116,7 @@ install:
         python -m pip install --disable-pip-version-check --user --upgrade pip wheel
         python -m pip install --user cython numpy matplotlib pillow pandas pydot
       } elseif ($env:CONDA) {
-        $env:BUILD_NAME = MSVC-2019-CXX$env:CPP-CONDA$env:CONDA
+        $env:BUILD_NAME = "MSVC-2019-CXX$env:CPP-CONDA$env:CONDA"
         if ($env:PLATFORM -eq "x64") {
           $env:PATH = "C:\Miniconda$env:CONDA-x64;C:\Miniconda$env:CONDA-x64\Scripts;$env:PATH"
           $env:CMAKE_PREFIX_PATH = "C:\Miniconda$env:CONDA-x64;C:\Miniconda$env:CONDA-x64\Scripts"
