--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ include(GNUInstallDirs)
 set(CMAKE_INSTALL_CONFIGDIR  ${CMAKE_INSTALL_DATAROOTDIR}/cmake/${PROJECT_NAME})
 
 if(NOT IS_ABSOLUTE CMAKE_INSTALL_PREFIX)
-    get_filename_component(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}" REALPATH)
+    get_filename_component(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/${CMAKE_INSTALL_PREFIX}" REALPATH)
 endif()
 
 if(UNIX AND NOT APPLE)
