--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -158,12 +158,14 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
             OPTIONAL)
     endif()
 
-    add_test(
-        NAME                ${SCRIPT_NAME}-console-script-test
-        COMMAND             ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
-        WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
-    set_tests_properties(${SCRIPT_NAME}-console-script-test PROPERTIES
-        ENVIRONMENT         "PYTHONPATH=${PROJECT_BINARY_DIR}:$ENV{PYTHONPATH}")
+    if(NOT WIN32)
+        add_test(
+            NAME                ${SCRIPT_NAME}-console-script-test
+            COMMAND             ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
+            WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
+        set_tests_properties(${SCRIPT_NAME}-console-script-test PROPERTIES
+            ENVIRONMENT         "PYTHONPATH=${PROJECT_BINARY_DIR}:$ENV{PYTHONPATH}")
+    endif()
 
 endfunction()
 
