Update appveyor [skip travis]

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -165,7 +165,8 @@ build_script:
     -DSITE=AppVeyor
     -DTARGET=INSTALL
     -DBUILD_NAME=%BUILD_NAME%
-    -DCTEST_ARGS="-C %CONFIG% -V --output-on-failure"
+    -DCMAKE_ARGS="--config %CONFIG%"
+    -DCTEST_ARGS="-V --output-on-failure"
     -P cmake\Scripts\timemory-ci.cmake
   - ls
   - cd build-timemory/Windows
