--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ jobs:
       env:
         - TRAVIS_PYTHON_VERSION=3.8
         - CONDA_OS=MacOSX
-        - CONFIG_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_BUILD_PYTHON_LINE_PROFILER=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
         - BUILD_ARGS='--minimal --build-libs shared --cxx-standard=17'
+        - CONFIG_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_BUILD_PYTHON_LINE_PROFILER=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
         #- CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
       # addons:
       #  homebrew:
@@ -45,10 +45,12 @@ jobs:
             - build-essential
             - libmpich-dev
             - mpich
+            - ccache
       env:
         - CC=clang-7
         - CXX=clang++-7
         - BUILD_ARGS='--minimal --build-libs shared static --python --mpi --gotcha --stats --tools mallocp mpip ompt --cxx-standard=17'
+        - CONFIG_ARGS='-DTIMEMORY_CCACHE_BUILD=ON'
     # Clang 8.0
     - os: linux
       dist: bionic
@@ -61,10 +63,12 @@ jobs:
           packages:
             - clang-8
             - build-essential
+            - ccache
       env:
         - CC=clang-8
         - CXX=clang++-8
         - BUILD_ARGS='--minimal --build-libs shared static --stats --tools kokkos-config timem --cxx-standard=14'
+        - CONFIG_ARGS='-DTIMEMORY_CCACHE_BUILD=ON'
     # GCC 6
     - os: linux
       dist: bionic
@@ -78,11 +82,13 @@ jobs:
             - g++-6
             - build-essential
             - libtbb-dev
+            - ccache
       env:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=RelWithDebInfo
         - BUILD_ARGS='--minimal --build-libs shared --python --stats --cxx-standard=14'
+        - CONFIG_ARGS='-DTIMEMORY_CCACHE_BUILD=ON'
     # GCC 7
     - os: linux
       dist: bionic
@@ -121,11 +127,13 @@ jobs:
             - openmpi-bin
             - openmpi-common
             - libfabric-dev
+            - ccache
       env:
         - CC=gcc-8
         - CXX=g++-8
         - BUILD_TYPE=RelWithDebInfo
         - BUILD_ARGS='--minimal --build-libs shared --mpi --stats --tools compiler --cxx-standard=17'
+        - CONFIG_ARGS='-DTIMEMORY_CCACHE_BUILD=ON'
 
 before_install:
   # - if [ -d /Library/Developer ]; then sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/* ; fi
