cmake and PTL updates + kokkosp_declare_metadata + timemory_named_init_library
- CMake updates related to timemory_message
- PTL update
- kokkosp_declare_metadata
- timemory_named_init_library
- cache_tests and kokkosp_tests updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,7 +286,7 @@ endif()
 #   Documentation
 #----------------------------------------------------------------------------------------#
 
-if("${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
+if(timemory_MAIN_PROJECT)
 
     include(Documentation)
 
@@ -299,7 +299,7 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
         "Print the list of enabled/disabled options and interface libraries" ON)
     mark_as_advanced(TIMEMORY_PRINT_FEATURES)
 
-    if(TIMEMORY_PRINT_FEATURES)
+    if(TIMEMORY_PRINT_FEATURES AND NOT TIMEMORY_QUIET_CONFIG)
         print_features()
     endif()
 
