--- a/source/tools/kokkos-connector/CMakeLists.txt
+++ b/source/tools/kokkos-connector/CMakeLists.txt
@@ -194,16 +194,16 @@ endif()
 
 if(timemory_MAIN_PROJECT)
     if(NOT TIMEMORY_BUILD_KOKKOS_CONFIG)
-        message(STATUS "")
-        message(STATUS
-            "[${PROJECT_NAME}] Disabled building explicit configurations with 'TIMEMORY_BUILD_KOKKOS_CONFIG=OFF'")
-        message(STATUS "")
+        timemory_message(STATUS "")
+        timemory_message(STATUS
+            "Disabled building explicit configurations with 'TIMEMORY_BUILD_KOKKOS_CONFIG=OFF'")
+        timemory_message(STATUS "")
     else()
-        message(STATUS "")
-        message(STATUS "Building explicit connector configurations: ${_CONNECTORS}")
-        message(STATUS "    Disable building explicit configurations with '-DTIMEMORY_BUILD_KOKKOS_CONFIG=OFF'")
-        message(STATUS "    Reduce explicit configurations with semi-colon delimited '-DTIMEMORY_BUILD_KOKKOS_CONNECTORS=\"...\"'")
-        message(STATUS "")
+        timemory_message(STATUS "")
+        timemory_message(STATUS "Building explicit connector configurations: ${_CONNECTORS}")
+        timemory_message(STATUS "    Disable building explicit configurations with '-DTIMEMORY_BUILD_KOKKOS_CONFIG=OFF'")
+        timemory_message(STATUS "    Reduce explicit configurations with semi-colon delimited '-DTIMEMORY_BUILD_KOKKOS_CONNECTORS=\"...\"'")
+        timemory_message(STATUS "")
     endif()
 endif()
 
@@ -236,7 +236,7 @@ function(ADD_CONNECTOR_CONFIG _NAME)
     endif()
 
     if("${CONNECTOR_COMPONENTS}" STREQUAL "")
-        message(AUTHOR_WARNING "Attempt to configure a kokkos-connector without any components: ${_NAME}")
+        timemory_message(AUTHOR_WARNING "Attempt to configure a kokkos-connector without any components: ${_NAME}")
     endif()
 
     if(CONNECTOR_GPU AND NOT CUDA_AVAILABLE)
@@ -256,7 +256,7 @@ function(ADD_CONNECTOR_CONFIG _NAME)
        set(_ENVIRON "${_ENVIRON}tim::set_env(\"${_ENV}\", 1);\n")
     endforeach()
     string(REPLACE "=" "\", \"" _ENVIRON "${_ENVIRON}")
-    message(STATUS "Building 'kp_timemory_${_NAME}' with '${_COMPONENTS}'...")
+    timemory_message(STATUS "Building 'kp_timemory_${_NAME}' with '${_COMPONENTS}'...")
     set(KP_COMPONENTS ${_COMPONENTS})
     set(KP_ENVIRON ${_ENVIRON})
     set(KP_LIBNAME "kp_timemory_${_NAME}")
