--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -210,6 +210,12 @@ kokkosp_parse_args(int argc, char** argv)
 }
 
 extern "C" void
+kokkosp_declare_metadata(const char* key, const char* value)
+{
+    tim::manager::add_metadata(key, value);
+}
+
+extern "C" void
 kokkosp_init_library(const int loadSeq, const uint64_t interfaceVer,
                      const uint32_t devInfoCount, void* deviceInfo)
 {
