--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,15 +201,14 @@ jobs:
             conda activate pyctest &&
             export CMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}:$(dirname $(dirname $(find /opt/software/ | grep 'cuda-' | grep 'cuda\.h$')))" &&
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
+            --quick
             --build-libs shared
-            --gotcha
-            --gperftools
-            --profile=cpu
-            --tools avail mallocp
+            --cuda
+            --tools avail
             --cxx-standard=17
             --compile-time-perf ${HOME}/ctp
             -- -V --output-on-failure -E cuda
-            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DPYTHON_EXECUTABLE=$(which python) -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DPYTHON_EXECUTABLE=$(which python) -DTIMEMORY_BUILD_ERT=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
@@ -258,5 +257,5 @@ workflows:
       - python-install
       - quick-build
       - cpu-dev-build
-      # - gpu-dev-build
+      - gpu-dev-build
       # - macos-dev-build
