--- a/source/tests/scripts/launch-process.sh.in
+++ b/source/tests/scripts/launch-process.sh.in
@@ -18,13 +18,15 @@ export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
 
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
+# append directories to path
+export PATH=@CMAKE_CURRENT_BINARY_DIR@:@PROJECT_BINARY_DIR@:${PATH}
 # add path to libtimemory to LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
 
 emit-separator "Performing runtime instrumentation"
 
 # launch
-@PROJECT_BINARY_DIR@/timemory-run --label args return -v 1 -ME '(^libm|^libc|^libz|^libicu|^liblzma|^libxml|\.c$)' -- @COMMAND@
+timemory-run --label args return -v 1 -ME '(^libm|^libc|^libz|^libicu|^liblzma|^libxml|\.c$)' -- @COMMAND@
 
 emit-separator "Analyzing results in ${TIMEMORY_OUTPUT_PATH}"
 
